Make button in error dialog centered

--- a/app/src/main/res/layout/dialog_error_details.xml
+++ b/app/src/main/res/layout/dialog_error_details.xml
@@ -32,6 +32,7 @@
 			style="?materialButtonTonalStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
 			android:layout_marginTop="6dp"
 			android:text="@string/open_in_browser" />
 
