--- a/app/src/main/res/layout/dialog_error_details.xml
+++ b/app/src/main/res/layout/dialog_error_details.xml
@@ -33,7 +33,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_horizontal"
-			android:layout_marginTop="6dp"
+			android:layout_marginBottom="2dp"
+			android:layout_marginTop="10dp"
 			android:text="@string/open_in_browser" />
 
 		<TextView
