--- a/app/src/main/res/layout/sheet_reader_config.xml
+++ b/app/src/main/res/layout/sheet_reader_config.xml
@@ -138,14 +138,16 @@
 				android:text="@string/two_page_scroll_sensitivity"
 				android:textAppearance="@style/TextAppearance.Kotatsu.GridTitle" />
 
-			<SeekBar
+			<com.google.android.material.slider.Slider
 				android:id="@+id/seekbar_sensitivity"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginHorizontal="@dimen/margin_normal"
+				android:layout_marginHorizontal="@dimen/margin_small"
 				android:layout_marginTop="@dimen/margin_small"
-				android:max="100"
-				tools:progress="50" />
+				android:valueFrom="0"
+				android:valueTo="100"
+				app:labelBehavior="floating"
+				tools:value="50" />
 
 			<com.google.android.material.materialswitch.MaterialSwitch
 				android:id="@+id/switch_pull_gesture"
